[tool.poetry]
name = "rusty-py-core"
version = "0.1.1"
description = "A starter project that uses Rust bindings"
authors = ["Andrei Fajardo <andrei@nerdai.io>"]
readme = "README.md"
packages = [{include = "rusty_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
maturin = "^1.4.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rusty-py-core"
version = "0.1.1"
description = "A starter project that uses Rust bindings"
authors = [{name="Andrei Fajardo", email="andrei@nerdai.io"}]
requires-python=">=3.7"
readme = "README.md"

[tool.maturin]
module-name = "rusty_py.core.rust_lib"

